[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/options/options.tscn" type="PackedScene" id=2]
[ext_resource path="res://engine/main.gd" type="Script" id=3]
[ext_resource path="res://ui/main/version_label.gd" type="Script" id=4]
[ext_resource path="res://ui/logo_animated_sprite.tres" type="SpriteFrames" id=6]
[ext_resource path="res://ui/loading_screen/loading_screen.tscn" type="PackedScene" id=7]

[node name="main" type="Control"]
margin_right = 39.9996
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 528.0
margin_bottom = 304.0
color = Color( 0.0705882, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 258.121, 55.1716 )
frames = ExtResource( 6 )
animation = "Logo"

[node name="top" type="Panel" parent="." groups=[
"menu",
]]
visible = false
margin_left = 176.0
margin_top = 117.572
margin_right = 336.0
margin_bottom = 269.572
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="top"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -76.0
margin_right = 72.0
margin_bottom = 76.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="singleplayer" type="Button" parent="top/VBoxContainer"]
margin_top = 15.0
margin_right = 144.0
margin_bottom = 36.7537
size_flags_stretch_ratio = 0.0
text = "Singleplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multiplayer" type="Button" parent="top/VBoxContainer"]
margin_top = 40.0
margin_right = 144.0
margin_bottom = 61.7537
size_flags_stretch_ratio = 0.0
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="Button" parent="top/VBoxContainer"]
margin_top = 65.0
margin_right = 144.0
margin_bottom = 86.7537
size_flags_stretch_ratio = 0.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="top/VBoxContainer"]
margin_top = 115.0
margin_right = 144.0
margin_bottom = 136.754
size_flags_stretch_ratio = 0.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multiplayer" type="TabContainer" parent="." groups=[
"menu",
]]
margin_left = 144.0
margin_top = 98.0
margin_right = 368.0
margin_bottom = 279.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Automatic" type="Control" parent="multiplayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.99585
margin_top = 29.9958
margin_right = -9.51308
margin_bottom = -9.11333

[node name="lobby" type="LineEdit" parent="multiplayer/Automatic"]
margin_left = 23.0042
margin_top = 68.0042
margin_right = 183.004
margin_bottom = 100.411
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connect" type="Button" parent="multiplayer/Automatic"]
margin_left = 71.0042
margin_top = 108.004
margin_right = 135.004
margin_bottom = 130.004
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="multiplayer/Automatic"]
margin_right = 210.0
margin_bottom = 66.0
text = "Enter any lobby name below to create a new server hosted by us. Enter the same lobby name as someone else to join their server."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Manual" type="Control" parent="multiplayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.99585
margin_top = 29.9958
margin_right = -9.51308
margin_bottom = -9.11333
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="multiplayer/Manual"]
margin_right = 199.0
margin_bottom = 146.0
text = "Host a server on this machine by pressing the button below.
Play on LAN with your local IP or online by port forwarding 7777.


Connect to a server with IP:Port"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="address" type="LineEdit" parent="multiplayer/Manual"]
margin_left = 8.0
margin_top = 114.0
margin_right = 136.0
margin_bottom = 146.407
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1:7777"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="multiplayer/Manual"]
margin_left = 71.0042
margin_top = 66.0042
margin_right = 135.004
margin_bottom = 90.0042
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="multiplayer/Manual"]
margin_left = 142.0
margin_top = 120.0
margin_right = 206.0
margin_bottom = 142.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" parent="." instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 143.0
margin_top = 98.0
margin_right = 368.0
margin_bottom = 277.0

[node name="VersionLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 330.0
margin_top = 231.0
margin_right = 468.0
margin_bottom = 244.0
text = "custom build"
align = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="." groups=[
"menu",
]]
margin_left = 18.0
margin_top = 252.0
margin_right = 66.0
margin_bottom = 274.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loading_screen_layer" type="CanvasLayer" parent="."]

[node name="loading_screen" parent="loading_screen_layer" instance=ExtResource( 7 )]
visible = false

[connection signal="mouse_entered" from="top/VBoxContainer/singleplayer" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="top/VBoxContainer/singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="mouse_entered" from="top/VBoxContainer/multiplayer" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="top/VBoxContainer/multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="mouse_entered" from="top/VBoxContainer/options" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="top/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="top/VBoxContainer/quit" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="top/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="multiplayer/Automatic/connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="multiplayer/Manual/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="multiplayer/Manual/join" to="." method="_on_join_pressed"]
[connection signal="mouse_entered" from="back" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
